Fix Spotify logo alignment - create cleaner, better aligned curved lines

--- a/styles.css
+++ b/styles.css
@@ -576,7 +576,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%231DB954'%3E%3Cpath d='M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4.062 14.455c-.163.264-.516.347-.78.184-2.14-1.307-4.83-1.605-8.005-.881-.307.07-.617-.117-.687-.424s.117-.617.424-.687c3.465-.792 6.426-.454 8.824.997.264.163.347.516.184.78zm1.115-2.48c-.203.33-.64.435-.97.232-2.45-1.508-6.18-1.945-9.078-.106-.347.22-.808.115-1.028-.232s-.115-.808.232-1.028c3.32-2.107 7.548-1.634 10.612.134.33.203.435.64.232.97zm.096-2.58C14.626 9.13 9.505 8.895 6.63 9.75c-.394.117-.808-.107-.925-.502s.107-.808.502-.925c3.318-.988 9.078-.712 12.518 1.378.378.232.498.734.266 1.112s-.734.498-1.112.266z'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='12' fill='%231DB954'/%3E%3Cpath d='M17.5 10.5c-3.2-1.9-8.5-2.1-11.6-1.2a.6.6 0 0 1-.4-1.1c3.5-1 9.4-.8 13 1.4a.6.6 0 1 1-.6 1zm-.7 1.7c-2.7-1.6-6.8-2.1-10-1.1a.5.5 0 0 1-.6-.8c3.6-1.1 8.2-.6 11.4 1.3a.5.5 0 1 1-.8 1.6zm-.6 1.6c-2.2-1.3-5.5-1.7-8.2-1a.4.4 0 0 1-.5-.6c3.1-.8 6.9-.4 9.3 1.1a.4.4 0 1 1-.6 1.5z' fill='black'/%3E%3C/svg%3E");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -698,7 +698,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%231DB954'%3E%3Cpath d='M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4.062 14.455c-.163.264-.516.347-.78.184-2.14-1.307-4.83-1.605-8.005-.881-.307.07-.617-.117-.687-.424s.117-.617.424-.687c3.465-.792 6.426-.454 8.824.997.264.163.347.516.184.78zm1.115-2.48c-.203.33-.64.435-.97.232-2.45-1.508-6.18-1.945-9.078-.106-.347.22-.808.115-1.028-.232s-.115-.808.232-1.028c3.32-2.107 7.548-1.634 10.612.134.33.203.435.64.232.97zm.096-2.58C14.626 9.13 9.505 8.895 6.63 9.75c-.394.117-.808-.107-.925-.502s.107-.808.502-.925c3.318-.988 9.078-.712 12.518 1.378.378.232.498.734.266 1.112s-.734.498-1.112.266z'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='12' fill='%231DB954'/%3E%3Cpath d='M17.5 10.5c-3.2-1.9-8.5-2.1-11.6-1.2a.6.6 0 0 1-.4-1.1c3.5-1 9.4-.8 13 1.4a.6.6 0 1 1-.6 1zm-.7 1.7c-2.7-1.6-6.8-2.1-10-1.1a.5.5 0 0 1-.6-.8c3.6-1.1 8.2-.6 11.4 1.3a.5.5 0 1 1-.8 1.6zm-.6 1.6c-2.2-1.3-5.5-1.7-8.2-1a.4.4 0 0 1-.5-.6c3.1-.8 6.9-.4 9.3 1.1a.4.4 0 1 1-.6 1.5z' fill='black'/%3E%3C/svg%3E");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -763,7 +763,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%231DB954'%3E%3Cpath d='M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4.062 14.455c-.163.264-.516.347-.78.184-2.14-1.307-4.83-1.605-8.005-.881-.307.07-.617-.117-.687-.424s.117-.617.424-.687c3.465-.792 6.426-.454 8.824.997.264.163.347.516.184.78zm1.115-2.48c-.203.33-.64.435-.97.232-2.45-1.508-6.18-1.945-9.078-.106-.347.22-.808.115-1.028-.232s-.115-.808.232-1.028c3.32-2.107 7.548-1.634 10.612.134.33.203.435.64.232.97zm.096-2.58C14.626 9.13 9.505 8.895 6.63 9.75c-.394.117-.808-.107-.925-.502s.107-.808.502-.925c3.318-.988 9.078-.712 12.518 1.378.378.232.498.734.266 1.112s-.734.498-1.112.266z'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='12' fill='%231DB954'/%3E%3Cpath d='M17.5 10.5c-3.2-1.9-8.5-2.1-11.6-1.2a.6.6 0 0 1-.4-1.1c3.5-1 9.4-.8 13 1.4a.6.6 0 1 1-.6 1zm-.7 1.7c-2.7-1.6-6.8-2.1-10-1.1a.5.5 0 0 1-.6-.8c3.6-1.1 8.2-.6 11.4 1.3a.5.5 0 1 1-.8 1.6zm-.6 1.6c-2.2-1.3-5.5-1.7-8.2-1a.4.4 0 0 1-.5-.6c3.1-.8 6.9-.4 9.3 1.1a.4.4 0 1 1-.6 1.5z' fill='black'/%3E%3C/svg%3E");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
